# agentic-forecasting-live

./: .gitignore  README.md  pyproject.toml
workshop_experiments/: README.md  pyproject.toml
workshop_experiments/tests/: test_adaptive_aggregate.py  test_adaptive_cli_tsx.py  test_adaptive_domain_tsx.py  test_adaptive_eval.py  test_adaptive_eval_tsx.py  test_adaptive_gates.py  test_adaptive_origins.py  test_adaptive_reflection.py  test_adaptive_reseed.py  test_adaptive_reseed_tsx.py  test_adaptive_study.py  test_adaptive_twins_config.py  test_data_tsx.py  test_domain.py  test_domain_tsx.py  test_live_aggregate.py  test_live_cli.py  test_live_config.py  test_live_gap_and_lock.py  test_live_gitops.py  test_live_records.py  test_live_resolve.py  test_live_simulate.py  test_registry.py  test_registry_tsx.py  test_resume.py  test_scenario_cli.py  test_scenario_domain_tsx.py  test_scenario_judge_cli.py  test_scenario_outcome.py  test_scenario_store.py  test_specs.py  test_specs_tsx.py
workshop_experiments/workshop_experiments/: __init__.py  data.py  data_tsx.py  domain.py  domain_tsx.py  progress.py  registry.py  run_backtest.py  runner.py  scenario.py  scenario_domain_tsx.py  scenario_judge.py  scenario_outcome.py  scenario_store.py  score.py  scoring.py  specs.py
workshop_experiments/workshop_experiments/adaptive/: __init__.py  domain.py  domain_tsx.py  eval_cli.py  evaluate.py  origins.py  reflection.py  reseed.py  session.py  study.py  study_cli.py  twins.py
workshop_experiments/workshop_experiments/live/: __init__.py  aggregate.py  cli.py  config.py  gitops.py  (+8 more)
(+14079 files in other folders)
